fix: Title bar was clipping

--- a/app/assets/css/layout.css
+++ b/app/assets/css/layout.css
@@ -35,7 +35,7 @@ html {
             display: flex;
             align-items: center;
             justify-content: center;
-            padding: 0 1rem;
+            padding: 0 1rem 0.25rem;
             min-width: 0;
             overflow: hidden;
             svg {
